--- a/Ayudantia-6/ayudantia6.tex
+++ b/Ayudantia-6/ayudantia6.tex
@@ -52,5 +52,43 @@
         \begin{center}
             \textbf{\fontsize{12}{24}\selectfont Ayudantes: Diego Duhalde, Benjamín Wiedmaier, Fernando Zamora}
         \end{center}
+
+        \section*{\raggedright\large Ordenamiento}
+        \begin{enumerate}    
+            % EJERCICIO 1
+            \item Defina qué es un algoritmo de ordenamiento, mencione al menos 3 algoritmos de ordenamiento y explique brevemente cómo funciona cada uno. Además, mencione la complejidad en tiempo de cada uno.
+            % EJERCICIO 2
+            \item Bajos a trabajar en base al arreglo \texttt{A = [5, 2, 9, 1, 5, 6]}, aplique 3 iteraciones de Selection Sort, 3 iteraciones de Insertion Sort y 3 iteraciones de Bubble Sort. Para cada iteración, indique el arreglo resultante, en el caso de Insertion Sort asuma que la primera iteración parte de i=1.
+        \end{enumerate}
+
+        \section*{\raggedright\large Búsqueda}
+        \begin{enumerate}    
+            % EJERCICIO 1
+            \item Describa búsqueda lineal y búsqueda binaria, también mencione la complejidad en el peor caso, mejor caso y caso promedio.
+            % EJERCICIO 2
+            \item Tenemos el arreglo \texttt{A = [1, 2, 3, 4, 5, 6, 7, 8, 9]}, aplique búsqueda binaria para encontrar el número 3. Describa cada paso de la búsqueda y el resultado final, mencione si estamos más cerca del peor caso, mejor caso o del caso promedio en términos de complejidad.
+        \end{enumerate}
+
+        \section*{\raggedright\large Listas y Hashing}
+        \begin{enumerate}    
+            % EJERCICIO 1
+            \item Defina qué es una lista enlazada, mencione sus ventajas y desventajas en comparación con un arreglo. Además, mencione la complejidad en tiempo de las operaciones básicas (\texttt{insertar}, \texttt{eliminar}, \texttt{buscar}).
+            % EJERCICIO 2
+            \item Tenemos la siguiente lista enlazada: \texttt{A = [1, 2, 3, 4, 5]}, aplique las siguientes operaciones: insertar el número 6 al final de la lista, eliminar el número 2 y buscar el número 4. Describa cada paso de la operación y el resultado final.
+            % EJERCICIO 3
+            \item Defina qué es una tabla hash, mencione sus ventajas y desventajas en comparación con una lista enlazada. Además, mencione la complejidad en tiempo de las operaciones básicas (\texttt{insertar}, \texttt{eliminar}, \texttt{buscar}).
+            % EJERCICIO 4
+            \item Suponga que tenemos una tabla hash de tamaño 10 y la siguiente función hash: \texttt{h(x) = x mod 10}. Inserte los siguientes números en la tabla hash: 12, 22, 32, 42, 52. Describa cada paso de la operación y el resultado final. ¿Qué tipo de colisión ocurre? ¿Cómo se podría resolver?
+        \end{enumerate}
+
+        \section*{\raggedright\large Colas y Pilas}
+        \begin{enumerate}    
+            % EJERCICIO 1
+            \item Menciona las diferencias principales entre una cola y una pila, da un ejemplo cotidiano de cada una.
+            % EJERCICIO 2
+            \item Explique en cada caso cómo se puede insertar y eliminar elementos de una cola y una pila. ¿Qué complejidad tienen estas operaciones? ¿Cual opciones nos conviene elegir?
+        \end{enumerate}
+
+
     \end{titlepage}
 \end{document}
